test/classes/initializers/phase2/modifyParentType.good
modifyParentType.chpl:11: In initializer:
modifyParentType.chpl:13: error: cannot update a type field, "x", from parent type in phase 2
